--- a/devops/docker.html
+++ b/devops/docker.html
@@ -637,12 +637,8 @@ jenkins
                     </div>
                 </div>
                 <h2>Play with Docker</h2>
-                <p><a href="https://www.docker.com/play-with-docker/" target="blank">"Play with Docker"</a> es una plataforma en línea que permite a los usuarios experimentar con Docker de forma interactiva. Ofrece un entorno de prueba donde puedes ejecutar comandos de Docker sin necesidad de instalarlo en tu máquina local. Esto facilita el aprendizaje, las pruebas rápidas y la posibilidad de compartir ejemplos de código sin complicaciones.</p>
-                <p>La plataforma es especialmente útil para aquellos que desean explorar las funcionalidades de Docker sin configurar un entorno complejo. Además, permite la colaboración entre usuarios, lo que resulta ideal para tutoriales o sesiones de enseñanza. Sin embargo, como es un entorno en línea, puede tener limitaciones en cuanto a recursos y la persistencia de datos, ya que los contenedores se eliminan al finalizar la sesión. En resumen, "Play with Docker" es una herramienta accesible para aprender y experimentar con Docker de manera sencilla.</p>
-                <div class="blog-image-grande">
-                    <img src="media/docker4.png" alt="">
-                </div>
-                <p>Docker simplifica la gestión de entornos aislados para aplicaciones, permitiendo tanto a desarrolladores como a administradores de sistemas tener un control detallado sobre cómo se despliegan y ejecutan las aplicaciones. Gracias a sus características de portabilidad, ligereza y modularidad, Docker se ha convertido en una herramienta esencial para la industria del software.</p>
+                <p><a href="https://www.docker.com/play-with-docker/" target="blank">"Play with Docker"</a> es una plataforma en línea que permite a los usuarios experimentar con Docker de forma interactiva. Ofrece un entorno de prueba donde puedes ejecutar comandos de Docker tener que instalarlo en tu máquina local. Esto facilita el aprendizaje, las pruebas rápidas y la posibilidad de compartir ejemplos de código sin complicaciones.</p>
+                <p>La plataforma es especialmente útil para aquellos que desean explorar las funcionalidades de Docker sin configurar un entorno complejo. Además, permite la colaboración entre usuarios, lo que resulta ideal para tutoriales o sesiones de enseñanza. Sin embargo, como es un entorno en línea, puede tener limitaciones en cuanto a recursos y la persistencia de datos, ya que los contenedores se eliminan al finalizar la sesión.</p>
                 <br>
                 <br>
             </div>
