--- a/hacking/respuesta.html
+++ b/hacking/respuesta.html
@@ -487,7 +487,7 @@ $string2 = { E2 34 A1 }
 condition:
 any of ($string*)
                     </div>
-                    <li><marcador class="resaltado3">Match: </marcador>Se utiliza para especificar qué eventos o condiciones deben cumplirse para que la regla se active.. No es una parte estándar de Yara, pero se refiere a cómo se manejan las coincidencias, dependiendo del contexto en que se utilice la regla.</li>
+                    <li><marcador class="resaltado3">Match: </marcador>Se utiliza para especificar qué eventos o condiciones deben cumplirse para que la regla se active. No es una parte estándar de Yara, pero se refiere a cómo se manejan las coincidencias, dependiendo del contexto en que se utilice la regla.</li>
                     <li><marcador class="resaltado3">Outcome: </marcador>Establece el resultado o la salida de la regla cuando se activan las condiciones del match.</li>
                 </ol>
                 <p>Ejemplo de regla YARA:</p>
