--- a/network.html
+++ b/network.html
@@ -121,6 +121,14 @@
             <img src="media/imagen2.png" alt="Rutas Estáticas" class="article-image">
             <h2><a href="network/static.html">Rutas Estáticas</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="RIP" class="article-image">
+            <h2><a href="network/rip.html">RIP</a></h2>
+        </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="EIGRP" class="article-image">
+            <h2><a href="network/eigrp.html">EIGRP</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
