--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -242,8 +242,12 @@ maximum-paths 2   # Permite hasta dos rutas simultáneas</code></pre>
                             <!-- Contenido del código -->
     <pre><code>hostname R1
 # Configuración de la interfaz
+interface fa1/0
+    ip address 1.1.1.1 255.255.255.255
+    no shutdown
+
 interface fa0/0
-    ip address 20.20.20.1 255.255.255.252
+    ip address 20.20.20.5 255.255.255.252
     no shutdown
 
 # Configuración EIGRP para el AS 20
@@ -263,12 +267,16 @@ router eigrp 20
                             <!-- Contenido del código -->
     <pre><code>hostname R2
 # Configuración de las interfaces
+interface fa1/0
+    ip address 2.2.2.2 255.255.255.255
+    no shutdown
+
 interface fa0/0
-    ip address 20.20.20.2 255.255.255.252
+    ip address 20.20.20.1 255.255.255.252
     no shutdown
 
 interface fa0/1
-    ip address 20.20.20.4 255.255.255.252
+    ip address 20.20.20.6 255.255.255.252
     no shutdown
 
 # Configuración EIGRP para el AS 20
@@ -290,20 +298,20 @@ router eigrp 20
                             <!-- Contenido del código -->
     <pre><code>hostname R3
 # Configuración de las interfaces
-interface fa0/0
-    ip address 20.20.20.5 255.255.255.252
+interface fa1/1
+    ip address 3.3.3.3 255.255.255.255
     no shutdown
 
 interface fa1/0
-    ip address 3.3.3.3 255.255.255.255
+    ip address 20.20.20.2 255.255.255.252
     no shutdown
 
 interface fa0/1
     ip address 10.10.10.1 255.255.255.252
     no shutdown
 
-interface fa0/2
-    ip address 10.10.10.3 255.255.255.252
+interface fa0/0
+    ip address 10.10.10.5 255.255.255.252
     no shutdown
 
 # Configuración EIGRP para el AS 20
@@ -317,7 +325,7 @@ router eigrp 20
 # Configuración EIGRP para el AS 10
 router eigrp 10
     network 10.10.10.0 0.0.0.3
-    network 10.10.10.2 0.0.0.3
+    network 10.10.10.4 0.0.0.3
     eigrp router-id 3.3.3.3
     no auto-summary
     exit</code></pre>
@@ -332,13 +340,17 @@ router eigrp 10
                             <!-- Contenido del código -->
     <pre><code>hostname R4
 # Configuración de la interfaz
+interface fa1/0
+    ip address 4.4.4.4 255.255.255.255
+    no shutdown
+
 interface fa0/0
-    ip address 10.10.10.2 255.255.255.252
+    ip address 10.10.10.6 255.255.255.252
     no shutdown
 
 # Configuración EIGRP para el AS 10
 router eigrp 10
-    network 10.10.10.2 0.0.0.3
+    network 10.10.10.4 0.0.0.3
     network 4.4.4.4 0.0.0.0
     eigrp router-id 4.4.4.4
     no auto-summary
@@ -354,13 +366,17 @@ router eigrp 10
                             <!-- Contenido del código -->
     <pre><code>hostname R5
 # Configuración de la interfaz
+interface fa1/0
+    ip address 5.5.5.5 255.255.255.255
+    no shutdown
+
 interface fa0/0
-    ip address 10.10.10.5 255.255.255.252
+    ip address 10.10.10.2 255.255.255.252
     no shutdown
 
 # Configuración EIGRP para el AS 10
 router eigrp 10
-    network 10.10.10.4 0.0.0.3
+    network 10.10.10.0 0.0.0.3
     network 5.5.5.5 0.0.0.0
     eigrp router-id 5.5.5.5
     no auto-summary
