--- a/network/rip.html
+++ b/network/rip.html
@@ -226,7 +226,7 @@ rip 1
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
-                    </div>redistribute static:
+                    </div>
                     <div class="codigo-consola">
                         <!-- Contenido del código -->
 <pre><code>sysname R3
