--- a/network.html
+++ b/network.html
@@ -129,6 +129,10 @@
             <img src="media/imagen2.png" alt="EIGRP" class="article-image">
             <h2><a href="network/eigrp.html">EIGRP</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="STP" class="article-image">
+            <h2><a href="network/stp.html">STP</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
